# employee_database

./: CMakeLists.txt  README.md  main.cpp  meson.build
.github/workflows/: main.yaml
src/: Database.cpp  Database.h  Employee.cpp  Employee.h  UserInterface.cpp  UserInterface.h  main.cpp
tests/: CMakeLists.txt  DatabaseTest.cpp  EmployeeTest.cpp  UserInterfaceTest.cpp  main.cpp  tests.cpp
